[gd_scene load_steps=6 format=3 uid="uid://moj0dfdg06ff"]

[ext_resource type="Texture2D" uid="uid://bjc6tpmnjgbp1" path="res://ui/escape_nor.png" id="1_q2s5o"]
[ext_resource type="Texture2D" uid="uid://bseroxeytuchl" path="res://ui/escape_prs.png" id="2_qxcgw"]
[ext_resource type="Texture2D" uid="uid://bcmjmet62gqr" path="res://ui/escape_dsbl.png" id="3_2ljxa"]
[ext_resource type="BitMap" uid="uid://byictnl4kho4k" path="res://ui/escape_mask.png" id="4_f1k3i"]
[ext_resource type="Script" uid="uid://o4hcxsaox3pd" path="res://ui/escape_btn.gd" id="5_3m35k"]

[node name="Escape_btn" type="TextureButton"]
offset_right = 100.0
offset_bottom = 73.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_q2s5o")
texture_pressed = ExtResource("2_qxcgw")
texture_disabled = ExtResource("3_2ljxa")
texture_click_mask = ExtResource("4_f1k3i")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("5_3m35k")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0.78431374, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0.78431374, 1)
theme_override_constants/line_spacing = -2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "UI_ESCAPE"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
